docs/0.12/_sources/api/gammapy.maps.MapAxis.rst.txt
MapAxis
=======

.. currentmodule:: gammapy.maps

.. autoclass:: MapAxis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapAxis.center
      ~MapAxis.edges
      ~MapAxis.interp
      ~MapAxis.name
      ~MapAxis.nbin
      ~MapAxis.node_type
      ~MapAxis.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapAxis.coord_to_idx
      ~MapAxis.coord_to_pix
      ~MapAxis.copy
      ~MapAxis.downsample
      ~MapAxis.from_bounds
      ~MapAxis.from_edges
      ~MapAxis.from_nodes
      ~MapAxis.group_table
      ~MapAxis.pix_to_coord
      ~MapAxis.slice
      ~MapAxis.squash
      ~MapAxis.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: center
   .. autoattribute:: edges
   .. autoattribute:: interp
   .. autoattribute:: name
   .. autoattribute:: nbin
   .. autoattribute:: node_type
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: downsample
   .. automethod:: from_bounds
   .. automethod:: from_edges
   .. automethod:: from_nodes
   .. automethod:: group_table
   .. automethod:: pix_to_coord
   .. automethod:: slice
   .. automethod:: squash
   .. automethod:: upsample
